--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,4 @@
+2009-05-20  Debarshi Ray  <rishi@gnu.org>
 
-
+	* *: The ChangeLog is auto-generated when releasing. If you
+	are seeing this, use 'git log' for a detailed list of changes.
