Final changes for 0.3 release.
+ Updated NEWS, README and TODO.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,47 @@
 Solang NEWS                                    -*- outline -*-
 
+* Noteworthy changes in release 0.3 (2009-09-17)
+
+** New features
+
+  A new logo and .desktop file.
+
+  Context sensitive popup on right-clicking a photo in the browser
+  renderer.
+
+  Folder exporter to export selected photos to a folder.
+
+  Improved editing abilities. A new GEGL based editing engine; and
+  support for brightness, contrast, saturation and scaling. Of these
+  only the first two operations are based on GEGL. The rest will be
+  migrated as GEGL improves in the future.
+
+  Introduced a histogram in the editor renderer and the property
+  manager.
+
+  It is now possible to copy a set of applied operations from one
+  photo and paste it onto others.
+
+  New vertical toolbox for the editor renderer. The flip, rotate and
+  scale operations are now placed in this toolbox, and their
+  corresponding entries have been removed from the menu.
+
+  Support for slideshows.
+
+  The date, property and tag managers, and the search basket are
+  hidden when using the editor renderer.
+
+  The main horizontal toolbar style has been set to "icons only".
+
+  Use a black background for the photo when in fullscreen mode and do
+  not draw a frame it.
+
+  New dependencies on BABL and GEGL.
+
+** New and updated translations
+
+  Bulgarian (bg), Italian (it).
+
 * Noteworthy changes in release 0.2 (2009-07-09)
 
 ** New features
