--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-23 08:35+0200\n"
-"PO-Revision-Date: 2009-12-10 10:54+0100\n"
+"PO-Revision-Date: 2009-11-23 15:20+0100\n"
 "Last-Translator: Adrien Beudin <beudbeud@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,6 +49,10 @@ msgstr "Afficher l'image en plein écran"
 #: ../src/application/main-window.cpp:253
 msgid "_Help"
 msgstr "Aid_e"
+
+#: src/application/main-window.cpp:276
+msgid "_View"
+msgstr "_Affichage"
 
 #: ../src/application/main-window.cpp:463
 msgid "A photo manager for GNOME"
@@ -96,11 +100,11 @@ msgstr "Enlever le filtre sélectionné"
 
 #: ../src/attribute/tag-manager.cpp:54 ../src/importer/importer-dialog.cpp:96
 msgid "Tags"
-msgstr "Etichette"
+msgstr "Etiquettes"
 
 #: ../src/attribute/tag-manager.cpp:100
 msgid "_Tags"
-msgstr "_Etiquette"
+msgstr "_Etiquettes"
 
 #: ../src/attribute/tag-manager.cpp:105
 msgid "Create New _Tag..."
@@ -148,6 +152,15 @@ msgstr "Selectionner une Icone pour l'etiquette"
 #: ../src/editor/editor.cpp:109 ../src/renderer/browser-renderer.cpp:125
 msgid "_Edit"
 msgstr "Editio_n"
+
+#: ../src/application/main-window.cpp:225
+#: ../src/renderer/browser-renderer.cpp:131
+msgid "_Add to Export Queue"
+msgstr "_Ajouter à la liste des export"
+
+#: ../src/application/main-window.cpp:232
+msgid "_Clear Export Queue"
+msgstr "_Nettoyer la liste des export"
 
 #: ../src/editor/editor.cpp:115
 msgid "Undo"
@@ -375,6 +388,16 @@ msgstr "Options"
 #: ../src/importer/importer-dialog.cpp:155
 msgid "_Import"
 msgstr "_Import"
+
+#: ../src/renderer/browser-renderer.cpp:139
+#: ../src/renderer/enlarged-renderer.cpp:111
+msgid "_Slideshow"
+msgstr "_Diaporama"
+
+#: ../src/renderer/browser-renderer.cpp:140
+#: ../src/renderer/enlarged-renderer.cpp:112
+msgid "Start a slideshow view of the photos"
+msgstr "Démarrer le diaporama"
 
 #: ../src/renderer/browser-renderer.cpp:126
 msgid "Edit picture"
