Updated the website and bug tracker URLs
Bug tracker: https://bugzilla.gnome.org/enter_bug.cgi?product=solang
Website: http://projects.gnome.org/solang

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ notice and this notice are preserved.
 
 Solang - A photo manager for GNOME
 ==================================
-Website: https://savannah.nongnu.org/projects/solang
+Website: http://projects.gnome.org/solang
 
 Motivation for the project
 --------------------------
