Updated Solang::TrackerClient according to changes in Tracker 0.7.16
TrackerClient is now a GObject:
http://download.gnome.org/sources/tracker/0.7/tracker-0.7.16.news

--- a/README
+++ b/README
@@ -55,7 +55,7 @@ Dependencies:
  - gegl
  - gtkimageview
  - gtkmm-2.4 >= 2.8
- - tracker-client-0.7
+ - tracker-client-0.7 >= 0.7.16
 
 Packages are available for Debian, Fedora and Ubuntu.
 
