Fixed the label of TagNewLabel::descriptionLabel_
It should be "Description:" and not "Description". Updated the
translations accordingly.

--- a/po/bg.po
+++ b/po/bg.po
@@ -194,7 +194,7 @@ msgstr "Име:"
 
 #: ../src/attribute/tag-new-dialog.cpp:49
 #: ../src/attribute/tag-new-dialog.cpp:79
-msgid "Description"
+msgid "Description:"
 msgstr "Описание"
 
 #: ../src/attribute/tag-new-dialog.cpp:56
